Switch from day/night themes to proper light/dark mode support

--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -2,6 +2,6 @@
 <resources>
     <array name="preloaded_fonts" translatable="false">
         <item>@font/basic</item>
-        <item>@font/ubuntu_mono</item>
+        <item>@font/roboto_mono</item>
     </array>
 </resources>
