--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -8,6 +8,20 @@
         <item>@string/settings_compass_mode_magnetic_value</item>
         <item>@string/settings_compass_mode_true_value</item>
     </string-array>
+    <string-array name="settings_location_format_labels">
+        <item>@string/settings_coordinates_format_dd_label</item>
+        <item>@string/settings_coordinates_format_ddm_label</item>
+        <item>@string/settings_coordinates_format_dms_label</item>
+        <item>@string/settings_coordinates_format_mgrs_label</item>
+        <item>@string/settings_coordinates_format_utm_label</item>
+    </string-array>
+    <string-array name="settings_location_format_values">
+        <item>@string/settings_coordinates_format_dd_value</item>
+        <item>@string/settings_coordinates_format_ddm_value</item>
+        <item>@string/settings_coordinates_format_dms_value</item>
+        <item>@string/settings_coordinates_format_mgrs_value</item>
+        <item>@string/settings_coordinates_format_utm_value</item>
+    </string-array>
     <string-array name="settings_theme_mode_labels">
         <item>@string/settings_theme_system_label</item>
         <item>@string/settings_theme_light_label</item>
