--- a/app/src/main/res/layout-land/dusk_fragment.xml
+++ b/app/src/main/res/layout-land/dusk_fragment.xml
@@ -28,7 +28,7 @@
             android:alpha="0.6"
             android:contentDescription="@null"
             android:src="@drawable/ic_dusk"
-            android:tint="@color/colorOnBackground"
+            android:tint="@color/onSurface"
             app:layout_constraintBottom_toBottomOf="@id/duskTextView"
             app:layout_constraintEnd_toStartOf="@id/duskTextView"
             app:layout_constraintStart_toStartOf="parent"
