--- a/app/src/main/res/layout/sun_fragment.xml
+++ b/app/src/main/res/layout/sun_fragment.xml
@@ -25,8 +25,8 @@
         app:piv_dynamicCount="true"
         app:piv_interactiveAnimation="true"
         app:piv_radius="3dp"
-        app:piv_selectedColor="@color/colorSecondary"
-        app:piv_unselectedColor="@color/onSurfaceVeryLightVariant"
+        app:piv_selectedColor="@color/primaryVariant"
+        app:piv_unselectedColor="@color/primary"
         app:piv_viewPager="@id/viewPager" />
 
     <TextView
