Tweak divider color and spacing

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,7 @@
     <color name="_blue900">#0d47a1</color>
 
     <color name="_gray1">#f9f9f9</color>
-    <color name="_gray2">#e8e8e8</color>
+    <color name="_gray2">#f0f0f0</color>
     <color name="_gray3">#282828</color>
 
     <color name="_deepPurple100">#D1C4E9</color>
